--- a/app/src/main/res/layout/content_tourview_win.xml
+++ b/app/src/main/res/layout/content_tourview_win.xml
@@ -8,7 +8,6 @@
         android:id="@+id/tour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#dfdbdb"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -22,7 +21,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_weight=".1"
                 android:adjustViewBounds="true"
-                android:background="@drawable/search" />
+                android:background="@drawable/win" />
         </RelativeLayout>
 
     </LinearLayout>
