--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -12,7 +12,7 @@
     <ListView
         android:id="@+id/Notification_listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:divider="@color/white"
         android:dividerHeight="5dp">
 
