--- a/app/src/main/res/layout/content_tourview_approve.xml
+++ b/app/src/main/res/layout/content_tourview_approve.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -15,46 +16,27 @@
             android:layout_weight=".5">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
                 android:adjustViewBounds="true"
-                android:background="@drawable/tour1" />
+                android:background="@drawable/contact" />
         </RelativeLayout>
+    </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight=".5"
+            android:layout_alignParentBottom="true"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_weight=".3"
-                android:gravity="center"
-                android:text="Approve"
-                android:textColor="#dc1c1c"
-                android:textSize="20sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight=".7"
-                android:gravity="center_horizontal"
-                android:paddingTop="5dp"
-                android:text="All required information will be sent
-to you and contact with him/her
-and meet him/her"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/Tour_approve_Next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="40dp"
                 android:gravity="center_horizontal"
                 android:padding="8dp"
                 android:text="Next"
@@ -64,6 +46,36 @@ and meet him/her"
 
         </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_marginTop="51dp"
+        android:layout_weight=".3"
+        android:gravity="center"
+        android:text="Approve"
+        android:textColor="#dc1c1c"
+        android:textSize="24sp" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="49dp"
+        android:layout_weight=".7"
+        android:gravity="center_horizontal"
+        android:paddingTop="5dp"
+        android:text="All required information will be sent
+to you and contact with him/her
+and meet him/her"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+
 </RelativeLayout>
