--- a/app/src/main/res/layout/content_tourview_proposal.xml
+++ b/app/src/main/res/layout/content_tourview_proposal.xml
@@ -8,13 +8,13 @@
         android:id="@+id/tour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#dfdbdb"
+        android:background="#fcf9f9"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="0.25">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_weight=".1"
                 android:adjustViewBounds="true"
-                android:background="@drawable/search" />
+                android:background="@drawable/touch" />
         </RelativeLayout>
 
     </LinearLayout>
