--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,23 +9,30 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.khalid.sharektest.MyProfile">
 
-    <ImageView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/myProfile_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/logo" />
+            android:layout_gravity="center"
+            android:src="@drawable/logo" />
     <TableLayout
         android:id="@+id/myProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/myProfile_imageView"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:animateLayoutChanges="true"
         android:background="#fafafa"
         android:baselineAligned="true"
         android:nextFocusDown="@color/black"
+        android:paddingLeft="15dp"
         android:splitMotionEvents="true">
 
         <TableRow
@@ -189,5 +196,5 @@
         </TableRow>
 
     </TableLayout>
-
 </RelativeLayout>
+</ScrollView>
