--- a/app/src/main/res/layout/activity_add_intrest.xml
+++ b/app/src/main/res/layout/activity_add_intrest.xml
@@ -199,8 +199,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/Price1"
             android:layout_marginTop="15dp"
-            android:text="Payment methods"
-            android:visibility="gone" />
+            android:text="Payment methods" />
     <LinearLayout
         android:id="@+id/checkbox1"
         android:layout_width="match_parent"
@@ -213,15 +212,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/addInterest_textView_Sat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Guarantee payment"
+                android:text="ٌReturn payment"
                 android:textStyle="bold" />
 
             <EditText
@@ -238,8 +236,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/addInterest_textView_nog"
