--- a/app/src/main/res/layout/activity_add_share.xml
+++ b/app/src/main/res/layout/activity_add_share.xml
@@ -219,7 +219,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Guarantee payment"
+                    android:text="Return payment"
                     android:textStyle="bold" />
 
                 <EditText
