--- a/app/src/main/res/layout/activity_common_tags_page.xml
+++ b/app/src/main/res/layout/activity_common_tags_page.xml
@@ -10,10 +10,10 @@
     tools:context="com.example.khalid.sharektest.CommonTagsPage">
 
     <ListView
+        android:id="@+id/commontags_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/commontags_listView"
-        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerVertical="true" />
 </RelativeLayout>
