--- a/app/src/main/res/layout/custom_row_common_tags.xml
+++ b/app/src/main/res/layout/custom_row_common_tags.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,28 +11,28 @@
         android:background="@drawable/my_custom_background">
 
         <TextView
+            android:id="@+id/customcommontags_name_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Books"
-            android:id="@+id/customcommontags_name_textView"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:text="Books"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="25dp"
             android:textStyle="normal|bold" />
 
         <TextView
+            android:id="@+id/customcommontags_numbers_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="10 Product"
-            android:id="@+id/customcommontags_numbers_textView"
-            android:layout_alignTop="@+id/customcommontags_name_textView"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="20dp" />
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/customcommontags_name_textView"
+            android:layout_marginRight="20dp"
+            android:text="10 Product"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 </LinearLayout>
