--- a/app/src/main/res/layout/proposal_dialog.xml
+++ b/app/src/main/res/layout/proposal_dialog.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:hint="dd/mm/yy"
-        android:inputType="text" />
+        android:inputType="date" />
 
     <TextView
         android:layout_width="match_parent"
@@ -47,7 +47,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:hint="Number of days" />
+        android:hint="Number of days"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="match_parent"
@@ -63,6 +64,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:hint="Number of pieces" />
+        android:hint="Number of pieces"
+        android:inputType="number" />
 
 </LinearLayout>
