--- a/app/src/main/res/layout/proposal_data_dialog.xml
+++ b/app/src/main/res/layout/proposal_data_dialog.xml
@@ -50,7 +50,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Show poster info" />
+            android:background="#d9461e"
+            android:text="Show poster info"
+            android:textColor="#FFFF" />
 
     </LinearLayout>
 
