--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -72,28 +72,28 @@
             </TableRow>
 
             <LinearLayout android:orientation="vertical">
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
 
-                <EditText
-                    android:id="@+id/signup_username_editText"
-                    android:layout_column="0"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="Username"
-                    android:inputType="textPersonName"
-                    android:textSize="12sp" />
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
-            </TableRow>
+                    <EditText
+                        android:id="@+id/signup_username_editText"
+                        android:layout_column="0"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Username"
+                        android:inputType="textPersonName"
+                        android:textSize="12sp" />
 
+                </TableRow>
                 <TextView
                     android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="*User name should be unique"
+                    android:text="*User name should be unique contain at least 8 characters [example.example] "
                     android:textColor="#ff4c0b"
                     android:textSize="8sp"
                     android:textStyle="italic" />
@@ -118,25 +118,25 @@
             </TableRow>
 
             <LinearLayout android:orientation="vertical">
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5sp"
-                android:layout_weight="1">
 
-                <EditText
-                    android:id="@+id/signup_address_editText"
+                <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="Home address"
-                    android:inputType="textPersonName"
-                    android:textSize="12sp" />
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5sp"
+                    android:layout_weight="1">
 
-            </TableRow>
+                    <EditText
+                        android:id="@+id/signup_address_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Home address"
+                        android:inputType="textPersonName"
+                        android:textSize="12sp" />
 
+                </TableRow>
                 <TextView
                     android:id="@+id/haddress"
                     android:layout_width="match_parent"
@@ -149,25 +149,25 @@
             </LinearLayout>
 
             <LinearLayout android:orientation="vertical">
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5sp"
-                android:layout_weight="1">
 
-                <EditText
-                    android:id="@+id/signup_email_editText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="E-mail"
-                    android:inputType="textEmailAddress"
-                    android:textSize="12sp" />
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5sp"
+                    android:layout_weight="1">
 
-            </TableRow>
+                    <EditText
+                        android:id="@+id/signup_email_editText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="E-mail"
+                        android:inputType="textEmailAddress"
+                        android:textSize="12sp" />
 
+                </TableRow>
                 <TextView
                     android:id="@+id/mail"
                     android:layout_width="match_parent"
@@ -231,25 +231,25 @@
             </TableRow>
 
             <LinearLayout android:orientation="vertical">
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="5sp"
-                android:layout_marginTop="5sp"
-                android:layout_weight="1">
 
-                <EditText
-                    android:id="@+id/signup_phone_editText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:hint="Your Phone"
-                    android:inputType="phone"
-                    android:textSize="12sp" />
-            </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginTop="5sp"
+                    android:layout_weight="1">
 
+                    <EditText
+                        android:id="@+id/signup_phone_editText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Your Phone"
+                        android:inputType="phone"
+                        android:textSize="12sp" />
+                </TableRow>
                 <TextView
                     android:id="@+id/phone"
                     android:layout_width="match_parent"
