--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,79 +13,85 @@
     tools:context="com.example.khalid.sharektest.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <LinearLayout
-        android:id="@+id/login"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:paddingLeft="30dp">
-    <EditText
-        android:id="@+id/LoginPage_UserName_editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="50dp"
-        android:layout_weight="1"
-        android:hint="User name"
-        android:paddingLeft="10dp" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/LoginPage_Password_editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="60dp"
-        android:layout_weight="1"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingLeft="10dp"
-        android:paddingTop="30dp" />
-    </LinearLayout>
-    <Button
-        android:id="@+id/LoginPage_Login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginTop="48dp"
-        android:background="@color/black"
-        android:text="Login"
-        android:textColor="@color/white"
-        android:translationZ="2dp" />
+        <LinearLayout
+            android:id="@+id/login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:paddingLeft="30dp">
 
-    <Button
-        android:id="@+id/LoginPage_SignUp_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/LoginPage_Login_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="23dp"
-        android:background="@color/black"
-        android:padding="15dp"
-        android:text="Create new account"
-        android:textColor="@color/white"
-        android:translationZ="2dp" />
+            <EditText
+                android:id="@+id/LoginPage_UserName_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="50dp"
+                android:layout_weight="1"
+                android:hint="User name"
+                android:paddingLeft="10dp" />
+
+            <EditText
+                android:id="@+id/LoginPage_Password_editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="60dp"
+                android:layout_weight="1"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingLeft="10dp"
+                android:paddingTop="30dp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/LoginPage_Login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/login"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="48dp"
+            android:background="@color/black"
+            android:text="Login"
+            android:textColor="@color/white"
+            android:translationZ="2dp" />
+
+        <Button
+            android:id="@+id/LoginPage_SignUp_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/LoginPage_Login_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="23dp"
+            android:background="@color/black"
+            android:padding="15dp"
+            android:text="Create new account"
+            android:textColor="@color/white"
+            android:translationZ="2dp" />
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="125sp"
-        android:layout_height="125sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:src="@drawable/logo" />
-    <!--<Button-->
-    <!--android:id="@+id/LoginPage_Skip_button"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_centerHorizontal="true"-->
-    <!--android:background="@color/white"-->
-    <!--android:text="Skip Login" />-->
-
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="120sp"
+            android:layout_height="120sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/logo" />
+        <!--<Button-->
+        <!--android:id="@+id/LoginPage_Skip_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:background="@color/white"-->
+        <!--android:text="Skip Login" />-->
+    </RelativeLayout>
+</ScrollView>
