--- a/app/src/main/res/layout/custom_row_search.xml
+++ b/app/src/main/res/layout/custom_row_search.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_alignParentEnd="false"
+            android:layout_alignParentLeft="false"
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="false"
             android:layout_below="@+id/customsearchrow_productname_textview"
