--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -12,197 +12,198 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/myProfile_imageView"
-        android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_weight=".3"
-            android:background="@drawable/logo"
-            android:src="@drawable/logo" />
-    <TableLayout
-        android:id="@+id/myProfile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/myProfile_imageView"
-        android:layout_marginTop="90dp"
-        android:layout_weight=".1"
-        android:animateLayoutChanges="true"
-        android:background="#fafafa"
-        android:baselineAligned="true"
-        android:nextFocusDown="@color/black"
-        android:paddingLeft="15dp"
-        android:splitMotionEvents="true">
 
-        <TableRow
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/myProfile_imageView"
+                android:layout_width="120dp"
+                android:layout_height="150dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_weight=".3"
+                android:background="@drawable/logo"
+                android:src="@drawable/logo" />
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp">
-
-
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="wrap_content"
+            <TableLayout
+                android:id="@+id/myProfile"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="User name"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#d61414"
-                android:textSize="17sp" />
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/myProfile_imageView"
+                android:layout_marginTop="90dp"
+                android:layout_weight=".1"
+                android:animateLayoutChanges="true"
+                android:background="#fafafa"
+                android:baselineAligned="true"
+                android:nextFocusDown="@color/black"
+                android:paddingLeft="15dp"
+                android:splitMotionEvents="true">
 
-            <TextView
-                android:id="@+id/myProfile_about_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="15"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="17sp" />
-        </TableRow>
+                <TableRow
 
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp">
 
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_marginTop="10dp"
-                android:text="Phone            "
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#d61414"
-                android:textSize="17sp" />
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="User name"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#d61414"
+                        android:textSize="17sp" />
 
-            <TextView
-                android:id="@+id/myProfile_about_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="15"
-                android:layout_marginTop="10dp"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="17sp" />
-        </TableRow>
-
-        <TableRow
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:text="Points  "
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#d61414"
-                android:textSize="17sp" />
-
-            <TextView
-                android:id="@+id/myProfile_about_points"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="15"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="17sp" />
-        </TableRow>
-
-        <TableRow
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp">
+                    <TextView
+                        android:id="@+id/myProfile_about_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="15"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="17sp" />
+                </TableRow>
 
 
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="E-mail  "
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#d61414"
-                android:textSize="17sp" />
-
-            <TextView
-                android:id="@+id/myProfile_about_mail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="15"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="17sp" />
-        </TableRow>
-
-        <TableRow
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp">
 
 
-            <TextView
-                android:id="@+id/textView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Address"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#d61414"
-                android:textSize="17sp" />
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:layout_marginTop="10dp"
+                        android:text="Phone            "
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#d61414"
+                        android:textSize="17sp" />
 
-            <TextView
-                android:id="@+id/myProfile_about_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="15"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="17sp" />
-        </TableRow>
+                    <TextView
+                        android:id="@+id/myProfile_about_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="15"
+                        android:layout_marginTop="10dp"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="17sp" />
+                </TableRow>
 
-        <TableRow
+                <TableRow
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="0"
+                        android:text="Points  "
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#d61414"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/myProfile_about_points"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="15"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="17sp" />
+                </TableRow>
+
+                <TableRow
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp">
 
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Job title  "
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#d61414"
-                android:textSize="17sp" />
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="E-mail  "
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#d61414"
+                        android:textSize="17sp" />
 
-            <TextView
-                android:id="@+id/myProfile_about_work"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="15"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="17sp" />
-        </TableRow>
+                    <TextView
+                        android:id="@+id/myProfile_about_mail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="15"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="17sp" />
+                </TableRow>
 
-    </TableLayout>
+                <TableRow
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp">
+
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Address"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#d61414"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/myProfile_about_address"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="15"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="17sp" />
+                </TableRow>
+
+                <TableRow
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp">
+
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Job title  "
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#d61414"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/myProfile_about_work"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_column="15"
+                        android:text=""
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="17sp" />
+                </TableRow>
+
+            </TableLayout>
         </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
 </ScrollView>
