--- a/app/src/main/res/layout/tab3.xml
+++ b/app/src/main/res/layout/tab3.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="No Proposals "
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:visibility="invisible" />
 
     <ListView
         android:id="@+id/myProfile_listView"
